hphp/test/zend/good/ext/date/tests/bug33532.php.skipif
<?php
<<__EntryPoint>> function main() {
if(PHP_OS == 'Darwin' || defined('PHP_WINDOWS_VERSION_MAJOR')) die("skip strftime uses system TZ on Darwin and Windows");
}
