hphp/test/zend/bad/ext/phar/tests/phar_gobyebye-win32.php.skipif
<?php if (!extension_loaded("phar")) die("skip");
if (strpos(PHP_OS, 'WIN') === false) die("skip Extra warning on Windows.");
?>